free-luch/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: free-luch-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /kitchen
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
          - path: /inventory
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
